Possible compatibility problems with earlier versions marked with '*'.

--- 2.0.34 2005/02/08 

Fixes for UNIX domain sockets. Bug #261.

Fixes for MARC-8 to UTF-8 conversion. Bugs #258 and #260.

Fixed bug #263: YAZ MARCXML dump shows extra spaces after control fields.
Added yaz_marc_subfield_str which defines subfield lead string which is
used in YAZ_MARC_LINE format. Default string is blank+$. Added
yaz_marc_endline_str which defines end of fields string used in
YAZ_MARC_LINE format. Default string is newline.

Experimental support for MarcXChange. This format can be produced
by yaz-marcdump and is implemented in yaz_marc_decode - functions.
 http://www.bs.dk/standards/MarcXchange.xsd

Added yaz-client commands scansize that sets maximum number of
entries to be returned by scan.

--- 2.0.32 2005/01/11 

Added support for SRW scan in yaz-client and Generic Frontend Server.

* Added whereInList member to SRW Scan Term.

* Changed Z_SRW_scanRequest to be able to carry both CCL and PQF.

Fixed NMEM system to return aligned blocks on the smallest boundaries
that are suitably aligned for all possible types on the particular
architecture YAZ is being built for.

--- 2.0.30 2005/01/04 

Fixed numerious warnings that was issued with newer versions of GCC.

Fixed NMEM system to return aligned blocks on 8 byte boundaries rather
than 4 bytes, since 4 may not be enough on some systems such as GCC 3.4.3
on Solaris.

Make YAZ Generic Frontend Server slightly faster.

Enhance (and reduce) logging for Generic Frontend Server.

Revert YAZ log system so that it flushes every write operation
by default. (YAZ 2.0.26 and earlier verisons did that). Bug #240.

Modified the YAZ logging system. The LOG level defines use YLOG_ prefix
instead of LOG_, due to name clash with syslog(3). LOG_ are still
present. New applications should define YAZ_USE_NEW_LOG=1 - this
will effectively disable old definitions.

--- 2.0.28 2004/11/09 

Added yaz_log_time_format which specifies log format using